# migro

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  dev-requirements.txt  profiles.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  codecov.yml  flake8.yml  pytest.yml
migro/: database.py  dbt.py  jinja.py  main.py  migrations.py
tests/: conftest.py  test_database.py  test_dbt.py  test_jinja.py  test_main.py  test_migrations.py
tests/fixtures/: private_key.der  private_key.pem  private_key_no_passphrase.pem
