[project]
name = "migro"
version = "0.3.0"
authors = [
  { name="Troy Harvey", email="troyharvey@gmail.com" },
]
description = "Data Warehouse migrations for dbt."
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/troyharvey/migro"
"Bug Tracker" = "https://github.com/troyharvey/migro/issues"
